replace featureImages and bg color

--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -343,30 +343,58 @@ libs:
 # The post featured images that needs to be displayed when there is no image.
 # 无文章特色图片时需要显示的文章特色图片.
 featureImages: 
-- /medias/featureimages/0.jpg
-- /medias/featureimages/1.jpg
-- /medias/featureimages/2.jpg
-- /medias/featureimages/3.jpg
-- /medias/featureimages/4.jpg
-- /medias/featureimages/5.jpg
-- /medias/featureimages/6.jpg
-- /medias/featureimages/7.jpg
-- /medias/featureimages/8.jpg
-- /medias/featureimages/9.jpg
-- /medias/featureimages/10.jpg
-- /medias/featureimages/11.jpg
-- /medias/featureimages/12.jpg
-- /medias/featureimages/13.jpg
-- /medias/featureimages/14.jpg
-- /medias/featureimages/15.jpg
-- /medias/featureimages/16.jpg
-- /medias/featureimages/17.jpg
-- /medias/featureimages/18.jpg
-- /medias/featureimages/19.jpg
-- /medias/featureimages/20.jpg
-- /medias/featureimages/21.jpg
-- /medias/featureimages/22.jpg
-- /medias/featureimages/23.jpg
+- /medias/featureimages/10453155_65058988_0.jpg
+- /medias/featureimages/10453155_65058988_1.jpg
+- /medias/featureimages/10532495_61814246.jpg
+- /medias/featureimages/11376797_69781778_7.jpg
+- /medias/featureimages/12278343_58150117.jpg
+- /medias/featureimages/13379747_69020042.jpg
+- /medias/featureimages/15568_44526375.jpg
+- /medias/featureimages/1589657_45219783.jpg
+- /medias/featureimages/163536_48337185.jpg
+- /medias/featureimages/163536_56137196.jpg
+- /medias/featureimages/163536_69212051.jpg
+- /medias/featureimages/163536_69689603_0.jpg
+- /medias/featureimages/163536_70858371.jpg
+- /medias/featureimages/163536_76852980.png
+- /medias/featureimages/1980643_51711470.jpg
+- /medias/featureimages/2003931_63410493.jpg
+- /medias/featureimages/20206340_74069242.jpg
+- /medias/featureimages/206781_61815710.jpg
+- /medias/featureimages/217707_34844544.jpg
+- /medias/featureimages/22124330_70695030.jpg
+- /medias/featureimages/2642047_70434530.png
+- /medias/featureimages/2642047_72684073.png
+- /medias/featureimages/2642047_74791199.png
+- /medias/featureimages/2642047_76611488.png
+- /medias/featureimages/3044849_29328488.jpg
+- /medias/featureimages/333556_50832484.jpg
+- /medias/featureimages/3367474_68808563_0.jpg
+- /medias/featureimages/3367474_69218705.png
+- /medias/featureimages/3367474_75470755.png
+- /medias/featureimages/3367474_76442763.png
+- /medias/featureimages/3402936_45830532.jpg
+- /medias/featureimages/3402936_51788613.jpg
+- /medias/featureimages/3402936_73590151.jpg
+- /medias/featureimages/418969_62519517.png
+- /medias/featureimages/418969_75554096_11.png
+- /medias/featureimages/418969_75554096_22.png
+- /medias/featureimages/418969_75554096_23.png
+- /medias/featureimages/418969_75554096_24.png
+- /medias/featureimages/418969_75554096_26.png
+- /medias/featureimages/4831812_53534975.jpg
+- /medias/featureimages/512849_49555871.png
+- /medias/featureimages/598731_30777669.jpg
+- /medias/featureimages/6327914_49176231_0.jpg
+- /medias/featureimages/6327914_63069334.jpg
+- /medias/featureimages/6327914_64702477.jpg
+- /medias/featureimages/660788_56520068.jpg
+- /medias/featureimages/660788_57135558.jpg
+- /medias/featureimages/7210261_42427235.jpg
+- /medias/featureimages/73152_64218491_3.png
+- /medias/featureimages/7640889_73580692.png
+- /medias/featureimages/7640889_76172401.png
+- /medias/featureimages/7640889_76423007.png
 
   # default configs that the default policy for every articles/posts
   # default 配置文章的默认转载规则
