--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,48 @@
-language: node_js # 编译语言、环境
+# 指定构建环境是Node.js，当前版本是稳定版
+language: node_js
+node_js: stable
 
-sudo: required # 需要管理员权限
+env:
+ global:
+   - URL_REPO: github.com/lecymeng/lecymeng.github.io.git
 
-dist: xenial # 指定 CI 系统版本为 Ubuntu16.04 LTS
-
-node_js: stable #Node.js 版本
-
+# 设置钩子只检测blog-source分支的push变动
 branches:
   only:
-    - hexo # 只有hexo分支检出更改才触发CI
+    - hexo
 
+# 设置缓存文件
+cache:
+  directories:
+    - node_modules
+
+#在构建之前安装hexo环境
 before_install:
-  - export TZ='Asia/Shanghai' #配置时区为东八区UTC+8
-  - npm install hexo-cli # 安装 hexo
-#  - sudo apt-get install libpng16-dev # 安装 libpng16-dev CI编译出现相关报错时请取消注释
+  - npm install -g hexo-cli
 
+#安装git插件和搜索功能插件
 install:
-  - npm install # 安装依赖
+  - npm install
 
-script: # 执行脚本，清除缓存，生成静态文件
+# 设置git提交名，邮箱；替换真实token到_config.yml文件
+before_script:
+  - git config user.name "lecymeng"
+  - git config user.email "1570682285@qq.com"
+  # 替换同目录下的 `_config.yml` 文件中 `github_token` 字符串为travis后台刚才配置的变量，注意>此处sed命令用了双引号，单引号无效
+  - sed -i "s/github_token/${GITHUB_TOKEN}/g" _config.yml || exit 1
+
+# 执行清缓存，生成网页操作
+script:
   - hexo clean
   - hexo generate
+  - echo ${ENV_TEST}
+  - hexo deploy
 
-deploy:
-  provider: pages
-  skip_cleanup: true # 跳过清理
-  local_dir: public # 需要推送到Github的静态文件目录
-  name: $GIT_NAME # 用户名变量
-  email: $GIT_EMAIL # 用户邮箱变量
-  github_token: $GITHUB_TOKEN # GitHub Token变量
-  keep-history: true # 保持推送记录，以增量提交的方式
-  target-branch: master # 推送的目标分支 local_dir->>master分支
-  on:
-    branch: hexo # 工作分支
+# configure notifications (email, IRC, campfire etc)
+# please update this section to your needs!
+# https://docs.travis-ci.com/user/notifications/
+notifications:
+  email:
+    - 1570682285@qq.com
+  on_success: change
+  on_failure: always
