--- a/_config.yml
+++ b/_config.yml
@@ -107,5 +107,6 @@ deploy:
   repo: https://github_token@github.com/lecymeng/lecymeng.github.io.git
   branch: master
 - type: git
-  repo: https://weicools:coding_pw@e.coding.net/weicools/Weicools.git
+  # 新的e.coding 只能用电话和邮箱，不能使用账户名，邮箱带@字符会导致Git链接识别错误
+  repo: https://phone_number:coding_token@e.coding.net/weicools/Weicools.git
   branch: master
