--- a/_config_temp.yml
+++ b/_config_temp.yml
@@ -3,19 +3,19 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Weicools
-subtitle: Weicools' blog
-description: 降りしきる強い雨, 描いた夢の果て
+title: Hexo
+subtitle: ''
+description: ''
 keywords:
-author: Weicools
-language: zh-CN
-timezone:
+author: John Doe
+language: en
+timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.weicools.com
+url: http://yoursite.com
 root: /
-permalink: :year:month:day/:title/
+permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -45,18 +45,12 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: false
+  enable: true
   line_number: true
   auto_detect: false
   tab_replace: ''
   wrap: true
   hljs: false
-
-prism_plugin:
-  mode: 'preprocess'    # realtime/preprocess
-  theme: 'tomorrow'
-  line_number: false    # default false
-  custom_css:
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -64,7 +58,7 @@ prism_plugin:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 12
+  per_page: 10
   order_by: -date
 
 # Category & Tag
@@ -87,7 +81,7 @@ use_date_for_updated: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 12
+per_page: 10
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -99,42 +93,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-matery
-
-search:
-  path: search.xml
-  field: post
-
-permalink_pinyin:
-  enable: true
-  separator: '-' # default: '-'
-
-feed:
-  type: atom
-  path: atom.xml
-  limit: 20
-  hub:
-  content:
-  content_limit: 140
-  content_limit_delim: ' '
-  order_by: -date
-
-githubEmojis:
-  enable: true
-  className: github-emoji
-  inject: true
-  styles:
-  customEmojis:
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-- type: git
-  # github_token 会被 .travis.yml 中sed命令替换
-  # repo: git@github.com:lecymeng/lecymeng.github.io.git
-  repo: https://github_token@github.com/lecymeng/lecymeng.github.io.git
-  branch: master
-- type: git
-  # 新的e.coding 只能用电话和邮箱，不能使用账户名，邮箱带@字符会导致Git链接识别错误
-  repo: https://phone_number:coding_token@e.coding.net/weicools/Weicools.git
-  branch: master
+  type: ''
