--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
+# hexo-theme-matery enable: true --> false
 highlight:
   enable: false
   line_number: true
@@ -52,6 +53,7 @@ highlight:
   wrap: true
   hljs: false
 
+# hexo-theme-matery add prism_plugin
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
   theme: 'tomorrow'
@@ -62,6 +64,7 @@ prism_plugin:
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
+# hexo-theme-matery per_page: 10 --> 12
 index_generator:
   path: ''
   per_page: 12
@@ -87,6 +90,7 @@ use_date_for_updated: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
+# hexo-theme-matery per_page: 10 --> 12
 per_page: 12
 pagination_dir: page
 
@@ -101,14 +105,17 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-matery
 
+# hexo-theme-matery add search
 search:
   path: search.xml
   field: post
 
+# hexo-theme-matery add permalink_pinyin
 permalink_pinyin:
   enable: true
   separator: '-' # default: '-'
 
+# hexo-theme-matery add feed
 feed:
   type: atom
   path: atom.xml
@@ -119,6 +126,7 @@ feed:
   content_limit_delim: ' '
   order_by: -date
 
+# hexo-theme-matery add githubEmojis
 githubEmojis:
   enable: true
   className: github-emoji
