--- a/_config.yml
+++ b/_config.yml
@@ -53,13 +53,6 @@ highlight:
   wrap: true
   hljs: false
 
-# hexo-theme-matery add prism_plugin
-prism_plugin:
-  mode: 'preprocess'    # realtime/preprocess
-  theme: 'tomorrow'
-  line_number: false    # default false
-  custom_css:
-
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -104,7 +97,9 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-matery
+# theme: fluid
 
+# hexo-theme-matery config start
 # hexo-theme-matery add search
 search:
   path: search.xml
@@ -114,6 +109,13 @@ search:
 permalink_pinyin:
   enable: true
   separator: '-' # default: '-'
+
+# hexo-theme-matery add prism_plugin
+prism_plugin:
+  mode: 'preprocess'    # realtime/preprocess
+  theme: 'tomorrow'
+  line_number: false    # default false
+  custom_css:
 
 # hexo-theme-matery add feed
 feed:
@@ -133,6 +135,7 @@ githubEmojis:
   inject: true
   styles:
   customEmojis:
+# hexo-theme-matery config end
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
