--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-matery
-# theme: fluid
+# theme: hexo-theme-fluid
 
 # hexo-theme-matery config start
 # hexo-theme-matery add search
